src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__agent_panel__tests__snapshot_agent_panel_empty.snap
---
source: src/adapters/tui/widgets/agent_panel.rs
expression: text
---
┌ Agents ──────────────────────────────────────────────────┐
│                                                          │
│                     No agents active.                    │
│      Ask the assistant to delegate or use plan mode.     │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
