src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__agent_panel__tests__snapshot_agent_panel_single.snap
---
source: src/adapters/tui/widgets/agent_panel.rs
expression: text
---
┌ Agents ──────────────────────────────────────────────────┐
│⏸ ♦ code-reviewer  0s                                     │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
