src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__agent_panel__tests__snapshot_agent_panel_terminal_states.snap
---
source: src/adapters/tui/widgets/agent_panel.rs
expression: text
---
┌ Agents ──────────────────────────────────────────────────┐
│✓ ♦ agent-ok  0s                                          │
│✗ ♦ agent-fail  0s                                        │
│⊘ ♦ agent-killed  0s                                      │
└──────────────────────────────────────────────────────────┘
