src/adapters/tui/widgets/snapshots/rustain__adapters__tui__widgets__agent_panel__tests__snapshot_agent_panel_three_level.snap
---
source: src/adapters/tui/widgets/agent_panel.rs
expression: text
---
┌ Agents ──────────────────────────────────────────────────┐
│▶ ♦ orchestrator  0s                                      │
│○ ♦   coder queued  0s                                    │
│○ ♦     reviewer queued  0s                               │
└──────────────────────────────────────────────────────────┘
